# INFO-5940

./: .gitignore  Chatbot.py  Dockerfile  LICENSE  README.md  chat_with_pdf.py  chat_with_rag.py  docker-compose.yml  pyproject.toml  summary.py  tokens.py
.devcontainer/: devcontainer.json
data/knowledge_base/: cornell.txt  duke.txt  fruits_and_veggies.txt  harvard.txt
notebooks/: Orchestrating_agents.ipynb  combined_transcript.txt  graphrag.ipynb  intro.ipynb  langchain.ipynb  langgraph.ipynb  neo4j.ipynb  prompt-engineering.ipynb  rag-101.ipynb  structured-db-rag.ipynb  tavily.ipynb  text_splitters.ipynb  vector_similarity.ipynb  whisper.ipynb
